# agentic-test-automation

./: Makefile  README.md  main.py  pyproject.toml  scenario_loader.py
.github/workflows/: ci.yaml
agents/: test_executor_agent.py  test_generator_agent.py  test_planner_agent.py
playwright_tests/: test_check_the_i_heart_yoga_schedule_for_yoga_in_the_park_activity.py  test_create_and_edit_google_docs_document.py  test_search_and_delete_google_docs_document.py
scenarios/: create_and_edit_doc.yaml  iheartyoga_park_schedule.yaml  search_and_delete_doc.yaml
src/agentic_test_automation/: ollama_request.py  respond_in_json.py  test.py
